--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8" />
+<title>Projeto POO</title>
 </head>
 <body>
-    <h1>Hello Parcel Iallen Gábio</h1>
-    <script type="module" src="./index.ts"></script>
+<h1>Sistema de chamados</h1>
+<script type="module" src="index.ts"></script>
 </body>
 </html>
